# Polar-Gosling

./: .gitignore  .gitmodules  .goreleaser.yaml  Dockerfile.runner  Makefile  README.md  go.mod  go.sum
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: ci.yml  release.yml
.kiro/hooks/: mcp-data-sync-check.kiro.hook
.kiro/settings/: mcp.json
.kiro/specs/gitops-runner-orchestration/: CHANGELOG.md  CONCEPTS.md  DEPLOYMENT-ARCHITECTURE.md  design.md  requirements.md  (+1 more)
.kiro/steering/: product.md  structure.md  tech.md
MCP/: README.md  pyproject.toml  server.py
MCP/data/: __init__.py  compute_module.py  cross_cutting.py  gosling.py  kiro.py  mothergoose.py  uglyfox.py
cmd/gosling/: main.go
docs/: index.html
internal/cli/: add.go  deploy.go  deploy_property_test.go  init.go  init_property_test.go  mode_equivalence_property_test.go  parse.go  parse_integration_test.go  parse_test.go  rollback.go  rollback_property_test.go  root.go  runner.go  runner_test.go  status.go  validate.go  validate_property_test.go
internal/deployer/: .gitkeep  aws_client.go  converter.go  converter_property_test.go  deployer.go  types.go  yandex_client.go
internal/gitlab/: .gitkeep  client.go
internal/mothergoose/: README.md  client.go  client_test.go  interface.go  metrics_test.go
internal/parser/: .gitkeep  ast.go  fly.go  parser.go  parser_property_test.go  parser_test.go  validator.go  validator_test.go
internal/runner/: .gitkeep  collector.go  manager.go  manager_metrics_test.go  metrics.go  metrics_test.go  metrics_unix.go  metrics_windows.go  router.go
(+4 files in other folders)
