[project]
name = "polar-gosling-mcp"
version = "0.1.0"
description = "MCP server exposing Polar Gosling system information"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
polar-gosling-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
strict = true

[tool.pylint.format]
max-line-length = 120
